    garbage, confusing the compiler.
  * fixed bugs 3cd: structure slot readers perform type check if the
    slot can have an invalid value (i.e. it is either not initialized
    or can be written with a less specific slot writer).
  * bug fix: the compiler now traps array references to elements off
    the end of an array; previously, the bounds checking in some
    circumstances could go off-by-one.
  * improved MACHINE-VERSION, especially on Linux (thanks to Lars
    Brinkhoff)
  * type declarations for array element types now obey the description
    on the CLHS page "Declaration TYPE", as per discussions on
    sbcl-help around 2003-05-08.  This means that a declaration 
    (TYPE (ARRAY FOO) BAR) means that, within the scope of the
    declaration, all references to BAR will be asserted or assumed
    (with THE, so dependent on compiler policy) to involve objects of
    type FOO.  Note that no such declaration is implied in 
    (MAKE-ARRAY .. :ELEMENT-TYPE 'FOO).
  * declared types of functions from the "Conditions"
    chapter. (reported by Paul Dietz)
  * bug fix: CERROR accepts a function as its first argument.

planned incompatible changes in 0.8.x:
  * (not done yet, but planned:) When the profiling interface settles
    down, it might impact TRACE. They both encapsulate functions, and
    it's not clear yet how e.g. UNPROFILE will interact with TRACE
    and UNTRACE. (This shouldn't matter, though, unless you are using
    profiling. If you never profile anything, TRACE should continue to
    behave as before.)
  * (not done yet, but planned:) Inlining can now be controlled the
    ANSI way, without MAYBE-INLINE, since the idiom
	(DECLAIM (INLINE FOO))
	(DEFUN FOO (..) ..)
	(DECLAIM (NOTINLINE FOO))
	(DEFUN BAR (..) (FOO ..))
	(DEFUN BLETCH (..) (DECLARE (INLINE FOO)) (FOO ..))
    now does what ANSI says it should. The CMU-CL-style 
    SB-EXT:MAYBE-INLINE declaration is now deprecated and ignored.