@@ -1901,6 +1901,8 @@ changes in sbcl-0.8.2 relative to sbcl-0.8.1:
   * declared types of functions from the "Conditions"
     chapter. (reported by Paul Dietz)
   * bug fix: CERROR accepts a function as its first argument.
+  * bug fix: NTH an NTHCDR accept a bignum as index
+    arguments. (reported by Adam Warner)
 
 planned incompatible changes in 0.8.x:
   * (not done yet, but planned:) When the profiling interface settles
